@@ -11,6 +11,7 @@ defined('_JEXEC') or die;
 
 use Joomla\CMS\Factory;
 use Joomla\CMS\Form\Field\ListField;
+use Joomla\Database\DatabaseInterface;
 
 class ContactusCategoriesField extends ListField
 {
@@ -18,7 +19,7 @@ class ContactusCategoriesField extends ListField
 
 	protected function getInput()
 	{
-		$db    = Factory::getContainer()->get('DatabaseDriver');
+		$db    = Factory::getContainer()->get(DatabaseInterface::class);
 		$query = $db->getQuery(true)
 			->select([
 				$db->qn('contactus_category_id'),
