@@ -1,6 +1,7 @@
 <?php die() ?>
 ContactUs 4.1.3
 ================================================================================
+~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
 ~ Block uninstallation of child extensions
 
 ContactUs 4.1.2
